# dh_file_sorter

./: README.md  pyproject.toml
dh_file_sorter/: consts.py  file_model.py  main.py  sorter.py  utils.py
